# flaw

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: release.yml  rust.yml
flaw/: CHANGELOG.md  Cargo.toml  README.md
flaw/benches/: bench.rs
flaw/src/: fir.rs  fractional_delay.rs  iir.rs  lib.rs  median.rs  sos.rs
flaw/src/butter_sos/: butter2.rs  butter4.rs  butter6.rs  butter_sos_tables_2.rs  butter_sos_tables_4.rs  butter_sos_tables_6.rs  mod.rs
flaw/src/sos/: mod.rs  test_helpers.rs
flaw/src/sos/tables/: butter2.rs  butter4.rs  butter6.rs  mod.rs
scripts/: butter.py  experimental.ipynb  fir.ipynb  generate_butter_sos_tables.py  requirements.txt  sos_butter_generate_coeffs.py  sos_test.py
test_no_std/: Cargo.toml
test_no_std/src/: main.rs
