[package]
name = "flaw"
version = "0.2.4"
edition = "2021"
authors = ["James Logan <jlogan03@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/jlogan03/flaw/"
homepage = "https://github.com/jlogan03/flaw/flaw"
description = "Control-law-inspired embedded signal filtering, no-std and no-alloc compatible."
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
interpn = { version = "^0.4.3", default-features = false }
libm = "^0.2.11"

[features]
default = []
std = []

[lints.rust]
unsafe_code = "forbid"
